# RandomStringAssembly

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blocking_queue.h  communicator.cpp  communicator.h  main.c  main.cpp  read_io.cpp  read_io.h  test.cpp  test.h
entity/: idset.cpp  idset.h  k_mer.cpp  k_mer.h  k_minus_mer.cpp  k_minus_mer.h  read.cpp  read.h
